--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="centered-wrapper">
             <h1 class="title">
-                The Garden of <a href="./forking" class="forking">Forking</a> <a href="./author" class="paths">Paths</a> 
+                <center>Group Project_WCC2 <a href="./contents" class="contents">Contents</a> & <a href="./authors" class="authors">Authors</a> </center> 
             </h1>
         </div>
 
