--- a/index.html
+++ b/index.html
@@ -1,20 +1,157 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Hypertext Concrete Poem Example</title>
+<html lang="zh-CN">
 
-        <!--This is a link to the css style sheet where you can make styling rules that will be applied to all pages-->
-        <link rel="stylesheet" href="./css/style.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Pull & Push_WCC2</title>
+</head>
 
-    </head>
-    <body>
-
-        <div class="centered-wrapper">
-            <h1 class="title">
-                <center>Group Project_WCC2 <a href="./contents" class="contents">Contents</a> & <a href="./authors" class="authors">Authors</a> </center> 
-            </h1>
+<body>
+    <div class="side-bar">
+        <div class="header">
+            <a href="./index.html" class="logo">Pull & Push</a>
+            <div class="intro">Workshops In Creative Coding 2</div>
         </div>
+        <div class="nav">
+            <a href="./index.html" class="item">Home</a>
+            <a href="./translator/MorseCode.html" class="item">Translator</a>
+            <a href="./authors/authors.html" class="item">About</a>
+        </div>
+    </div>
+    <div class="main">
+        <div class="article-list">
+            <div class="item">
+                <div class="title">
+                    <jimmy> Jimmy </jimmy>
+                </div>
+                <div class="status">Posted in: 2023-01-18 | Tag: #Intro</div>
 
-    </body>
+                <div class="content"> <!--vscode shift + alt + F 自动排版-->
+                    <p>.... .. -....- .--. . .. .-. ..- .-.-.- -....- .... --- .-- -....- .- .-. . -....- -.-- --- ..-
+                        -....- - --- -.. .- -.-- -....- .... --- -. . ... - .-.. -.-- -....- .. -- -....- .- -....- ..-.
+                        .-. . ... .... -- .- -. -....- - --- -....- -.-. --- -.. .. -. --. -....- .- -. -.. -....- .--
+                        --- ..- .-.. -.. -....- -... . -....- .... .- .--. .--. -.-- -....- - --- -....- .-- --- .-. -.-
+                        -....- .-- .. - .... -....- -.-- --- ..-
+                    </p>
+                </div>
+            </div>
+
+            <hr class="edge">
+
+            <div class="item">
+                <h2>
+                    <peiru> Peiru </peiru>
+                </h2>
+                <div class="status">Posted in: 2023-01-19 | Tag: #Intro</div>
+                <div class="content">
+                    <p>Hi, Jimmy. Nice to see U!</p>
+                </div>
+            </div>
+
+            <hr class="edge">
+
+            <div class="item">
+                <div class="title">
+                    <jimmy> Jimmy </jimmy>
+                </div>
+                <div class="status">Posted in: 2023-01-21 | Tag: #Poems to share</div>
+                <div class="content">
+                    <h3>Silence<br /></h3>
+
+                    <p>- .... . .-. . -....- .. ... -....- .- -....- ... .. .-.. . -. -.-. . -....- .-- .... . .-. .
+                        -....- .... .- - .... -....- -... . . -. -....- -. --- -....- ... --- ..- -. -.. -....- - .... .
+                        .-. . -....- .. ... -....- .- -....- ... .. .-.. . -. -.-. . -....- .-- .... . .-. . -....- -.
+                        --- -....- ... --- ..- -. -.. -....- -- .- -.-- -....- -... . -....- .. -. -....- - .... .
+                        -....- -.-. --- .-.. -.. -....- --. .-. .- ...- . -....- -....- ..- -. -.. . .-. -....- - .... .
+                        -....- -.. . . .--. -....- -.. . . .--. -....- ... . .- -....- --- .-. -....- .. -. -....- .--
+                        .. -.. . -....- -.. . ... . .-. - -....- .-- .... . .-. . -....- -. --- -....- .-.. .. ..-. .
+                        -....- .. ... -....- ..-. --- ..- -. -.. -....- .-- .... .. -.-. .... -....- .... .- - ....
+                        -....- -... . . -. -....- -- ..- - . -....- .- -. -.. -....- ... - .. .-.. .-.. -....- -- ..-
+                        ... - -....- ... .-.. . . .--. -....- .--. .-. --- ..-. --- ..- -. -.. -....- -. --- -....- ...-
+                        --- .. -.-. . -....- .. ... -....- .... ..- ... .... -.. -....- -....- -....- -. --- -....- .-..
+                        .. ..-. . -....- - .-. . .- -.. ... -....- ... .. .-.. . -. - .-.. -.-- -....- -... ..- - -....-
+                        -.-. .-.. --- ..- -.. ... -....- .- -. -.. -....- -.-. .-.. --- ..- -.. -.-- -....- ... .... .-
+                        -.. --- .-- ... -....- .-- .- -. -.. . .-. -....- ..-. .-. . . .-.-.- -....- - .... .- - -....-
+                        -. . ...- . .-. -....- ... .--. --- -.- . -....- --- ...- . .-. -....- - .... . -....- .. -..
+                        .-.. . -....- --. .-. --- ..- -. -.. -....- -... ..- - -....- .. -. -....- --. .-. . . -. -....-
+                        .-. ..- .. -. ... -....- .. -. -....- - .... . -....- -.. . ... --- .-.. .- - . -....- .-- .-
+                        .-.. .-.. ... -....- --- ..-. -....- .- -. - .. --.- ..- . -....- .--. .- .-.. .- -.-. . ...
+                        -....- .-- .... . .-. . -....- -- .- -. -....- .... .- - .... -....- -... . . -. -....- - ....
+                        --- ..- --. .... -....- - .... . -....- -.. ..- -. -....- ..-. --- -..- -....- --- .-. -....-
+                        .-- .. .-.. -.. -....- .... -.-- . -. .- -....- -.-. .- .-.. .-.. ... -....- .- -. -.. -....-
+                        --- .-- .-.. ... -....- - .... .- - -....- ..-. .-.. .. - -....- -.-. --- -. - .. -. ..- .- .-..
+                        .-.. -.-- -....- -... . - .-- . . -. -....- ... .... .-. .. . -.- -....- - --- -....- - .... .
+                        -....- . -.-. .... --- -....- .- -. -.. -....- - .... . -....- .-.. --- .-- -....- .-- .. -. -..
+                        ... -....- -- --- .- -. -....- -....- - .... . .-. . -....- - .... . -....- - .-. ..- . -....-
+                        ... .. .-.. . -. -.-. . -....- .. ... -....- ... . .-.. ..-. -....- -.-. --- -. ... -.-. .. ---
+                        ..- ... -....- .- -. -.. -....- .- .-.. --- -. . .-.-.-
+                    </p>
+
+                    <i>written by Thomas Hood</i>
+                </div>
+            </div>
+
+            <hr class="edge">
+
+            <div class="item">
+                <h2>
+                    <peiru> Peiru </peiru>
+                </h2>
+                <div class="status">Posted in: 2023-01-19 | Tag: #Intro</div>
+                <div class="content">
+                    <p>Hi, Jimmy. Nice to see U!</p>
+                </div>
+            </div>
+
+            <hr class="edge">
+
+            <div class="item">
+                <div class="title">
+                    <jimmy> Jimmy </jimmy>
+                </div>
+                <div class="status">Posted in: 2023-01-25 | Tag: #Blog</div>
+                <div class="content">
+
+                    <p>.. - ... -....- -... . . -. -....- .- -....- .-. . .- .-.. .-.. -.-- -....- -... .- -.. -....-
+                        -.. .- -.-- -....- .- -. -.. - ....- - .... . .-. . ... -....- -. --- - .... .. -. --. -....- ..
+                        -....- .-- .- -. - -....- - --- -....- ... .... .- .-. .
+                    </p>
+
+                </div>
+            </div>
+
+            <div class="item">
+
+                <h2>
+                    <peiru> Peiru </peiru>
+                </h2>
+                <div class="status">Posted in: 2023-01-19 | Tag: #Intro</div>
+                <div class="content">
+                    <p>Hi, Jimmy. Nice to see U!</p>
+                </div>
+            </div>
+
+            <hr class="edge">
+
+            <div class="item">
+                <div class="title">
+                    <jimmy> Jimmy </jimmy>
+                </div>
+                <div class="status">Posted in: 2023-01-21 | Tag: #Poems to share</div>
+                <div class="content">
+                    <h3>Silence<br /></h3>
+
+                    <p>- --- -.. .- -.-- -....- .. -....- - .-. .. . -.. -....- - --- -....- -- .- -.- . -....- - .- --
+                        .- --. --- - -.-. .... .. -....- ..- ... .. -. --. -....- .--. ..... .--- ... -....- .- -. -..
+                        -....- .. - -....- ..-. . .-.. - -....- .--. .-. . - - -.-- -....- --. --- --- -.. .-.-.-
+                    </p>
+
+                </div>
+            </div>
+</body>
+
 </html>
